deployment/base/payload-processing-praxis/instance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payload-processing
  namespace: openshift-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payload-processing
  template:
    metadata:
      labels:
        app: payload-processing
    spec:
      serviceAccountName: payload-processing
      securityContext:
        runAsNonRoot: true
      containers:
        - name: payload-processing
          image: praxis-extproc
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          args:
            - -c
            - /etc/praxis/extproc.yaml
          ports:
            - containerPort: 9004
              name: grpc
              protocol: TCP
            - containerPort: 50052
              name: health
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: plugins-config-volume
              mountPath: /etc/praxis
              readOnly: true
      volumes:
        - name: plugins-config-volume
          configMap:
            name: payload-processing-plugins
